--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -17,7 +17,7 @@ stages:
     cfCredentialsId: "deploy-to-cf"
     uiVeri5ExecuteTests: false
   Release:
-    cloudFoundryDeploy: true
+    cloudFoundryDeploy: false
     cfApiEndpoint: "https://api.cf.us10-001.hana.ondemand.com"
     cfOrg: "59985d04trial"
     cfSpace: "dev"
